<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity">

    <ImageView
        android:contentDescription="@string/photo_detail"
        android:id="@+id/photoDetail"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:transitionName="photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nameDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoDetail" />

    <TextView
        android:id="@+id/descriptionDetail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/Deskripsi"
        android:maxLines="10"
        android:ellipsize="end"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/nameDetail"
        app:layout_constraintTop_toBottomOf="@+id/nameDetail" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photoDetail" />
</androidx.constraintlayout.widget.ConstraintLayout>